<resources>
    <string name="app_name">Event.tn</string>
    <string name="mapKey">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string-array name="navDrawerItems">
        <item> liste Evenement</item>
        <item>Favoris</item>
        <item>Ajoutevent</item>
        <item>Parametre</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="label_btn_find">Find</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text1">gggggggggggggggggggg</string>
    <string name="imagess">image</string>
    <string name="ppp">pppppppp :</string>
    <string name="descrip">desc</string>
    <string name="kkkk">11 ÈME EDITION DU FESTIVAL DES ARTS NUMÉRIQUES 2016</string>
    <string name="title_activity_holi">holi</string>
    <string name="b4">Parametre</string>
    <string name="title">Notification</string>
    <string name="textview10">recever un message de notification</string>
    <string name="ti">Version</string>
    <string name="textView1">1.0</string>
    <string name="te">Apropos de app</string>
    <string name="textVie">event.tn cette application a eté developé par kaouther  copyright 2017</string>
    <string name="date">29_09_2016</string>
    <string name="text">PPPP:</string>
    <string name="ooo">OOOOOOOOOO</string>
    <string name="liste">liste est vide</string>
    <string name="image">gg</string>
    <string name="b1">liste Evenement</string>
    <string name="b3">Ajouter un événement</string>
    <string name="b2">Favoris</string>
    <string name="them">description</string>
    <string name="tt">tt</string>
    <string name="cotegoriee">Categorie :</string>
    <string name="holi">Holi festival of Colors Monastir</string>
    <string name="desc">Festival</string>
    <string name="rr">Description :</string>
    <string name="imagee">immag</string>
    <string name="icone1">icone1</string>
    <string name="lieu">Lieu et date :</string>
    <string name="monastir">28 mai 2016 , monastir</string>
    <string name="festival">festival colors 2016</string>
    <string name="pic">description</string>
    <string name="categ">ctg</string>
    <string name="textCatg">Categorie :</string>
    <string name="nome">Zumba International</string>
    <string name="nom">culturel</string>
    <string name="descii">Description :</string>
    <string name="imagev">imagev</string>
    <string name="place">place</string>
    <string name="datelieu">Lieu et date :</string>
    <string name="descc">28 mai 2016 , a partir de 21h au Casino Djerba</string>
    <string name="desca">Fans de Zumba Energy sport, Pro fitness et Le Grand Casino de Djerba vous invitent à une soirée très spéciale. Programme : * 21h 00 : Zumba Party * 00h00 : DJ party Non Stop Tarif : 10 Dinars / personne Réservation et paiement : Energy Sport Djerba Casino Djerba Infoline : Energy Sport : 75 650 040 /55 650 046</string>
    <string name="tem">description</string>
    <string name="catego">categorie</string>
    <string name="textcat">Categorie :</string>
    <string name="nomevent">Randonnée CAP FARINA</string>
    <string name="sport">Sport</string>
    <string name="des">Description :</string>
    <string name="imag">imag</string>
    <string name="icone">text</string>
    <string name="lieuD">Lieu et date :</string>
    <string name="dee">29 mai 2016 , plage de bizerte : CAP FARINA ,a partir 06:00</string>
    <string name="de">Amoureux des Randonnées, nous revoilà Alors on tours en plein souffle commençant la saison d\'été par une randonnée dans l\'un des plus fameux plage de bizerte : CAP FARINA</string>
    <string name="imagethem">description</string>
    <string name="iconeholi">iconee</string>
    <string name="cattholi">Categorie :</string>
    <string name="nomholi">Holi festival of Colors Monastir</string>
    <string name="festholi">festival</string>
    <string name="desholi">Description :</string>
    <string name="holiimage">imageholi</string>
    <string name="holiplace">placeholi</string>
    <string name="dateholi">Lieu et date :</string>
    <string name="textholi">28 mai 2016 à Monastir</string>
    <string name="descholi">Holi festival of Colors Monastir is the best</string>
    <string name="descfes">Cette labélisation favorise l’innovation ouverte (Open innovation) et c’est justement dans cette dynamique qu’œuvre le Festival des Arts Numériques depuis son lancement.</string>
    <string name="datefes">Institut Français de Tunisie , 21 ET 22mai 2016</string>
    <string name="lieufes">Lieu et date :</string>
    <string name="plaaceefes">placefes</string>
    <string name="imagefes">imagefes</string>
    <string name="descfesc">Description :</string>
    <string name="festivall">festival</string>
    <string name="catfes">Categorie :</string>
    <string name="iconefes">iconefes</string>
    <string name="picfes">description</string>
    <string name="imageactiv">description</string>
    <string name="iconactivity">iconactiv</string>
    <string name="cateactivi">Categorie :</string>
    <string name="nomevents">CARTHAGODS RELEASE SHOW</string>
    <string name="culture">culture</string>
    <string name="descrp">Description :</string>
    <string name="imaactivity">imagactivi</string>
    <string name="iconejj">jj</string>
    <string name="textactiv">Lieu et date :</string>
    <string name="descactiv">CineMadart,Carthage/28 Avril 2016 au 28 Mai 2016 à 17:00</string>
    <string name="activi">CARTHAGODS RELEASE SHOW le samedi 28 mai 2016 à 17h au Mad\'art Carthage souhaitez que votre groupe prenne part à ce concert envoyez votre candidature à carthagodsmgmt@gmail.com .</string>
    <string name="logintite">Inscrivez-vous pour en savoir plus</string>
    <string name="compte">Vous avez déjà un compte ?</string>
    <string name="connect">Connectez-vous</string>
    <string name="imagelogin">imagelogin</string>
    <string name="textlogin">E-mail</string>
    <string name="edit">Créer un Mot de passe</string>
    <string name="inscrie">s\'inscrire</string>
    <string name="imaelectro">description</string>
    <string name="hh">iconelectro</string>
    <string name="monelectro">Categorie :</string>
    <string name="nomel">ZAGHOUANE ELECTRONIC ZE2016</string>
    <string name="festivalelectro">Festival</string>
    <string name="descelectr">Description :</string>
    <string name="imagelectro">imaelectro</string>
    <string name="descelectro">festivale electronic 2016</string>
    <string name="lieuelectro">28 mai 2016 , zaghouane</string>
    <string name="dateelectro">Lieu et date :</string>
    <string name="iconeelectro">iconeelectro</string>
    <string name="descdetails">Date de sortie 13 août 2008 (1h 53min) De Pierre Schoeller</string>
    <string name="lieudetails">27 mai 2016 à 14h à l\'Institut français de Tunisie</string>
    <string name="lieudatedetails">Lieu et date :</string>
    <string name="iconedetails">iconedetails</string>
    <string name="imagedet">description</string>
    <string name="icondetailss">iconeedet</string>
    <string name="categdetails">Categorie :</string>
    <string name="nomdetails">Versailles</string>
    <string name="typedetails">Cinema</string>
    <string name="imagedetails">imagedetails</string>
    <string name="descpdetails">Description :</string>
    <string name="m">l</string>
    <string name="welcome">Bienvenue sur votre compte !</string>
    <string name="page">ajouter un evenement</string>
    <string name="textv">Ajouter un evenement</string>
    <string name="nomEvent">Nom de l\'évenement</string>
    <string name="Date">date</string>
    <string name="ville">ville</string>
    <string name="dess">description</string>
    <string name="lieuu">lieu</string>
    <string name="soumettre">soumettre</string>
    <string name="bbbbbb">nnnnn</string>
    <string name="insclien">Déjà membre? S\'identifier</string>
    <string name="button">Créer un compte</string>
    <string name="mdp">mot de passe</string>
    <string name="mail">Email</string>
    <string name="nominscr">Nom</string>
    <string name="picc">ppppp</string>
    <string name="ct">sport</string>
    <string name="img">p</string>
    <string name="ff">nn</string>
    <string name="catt">sport</string>
    <string name="b5">rechercher par ville</string>
    <string name="b6">autour de moi</string>
    <string name="event">liste est vide</string>
    <string name="view">pic</string>
    <string name="Email">Email</string>
    <string name="mtp">mot de passe</string>
    <string name="connecter">connecter</string>
    <string name="linkinscri">Pas encore de compte? Inscrivez-vous</string>
    <string name="item">oo</string>
    <string name="itemm">k</string>
    <string name="deconnecter">deconnecter</string>
    <string name="tunis">Tunis</string>
    <string name="tataou">Tataouine</string>
    <string name="sfax">Sfax</string>
    <string name="beja">Béja</string>
    <string name="link">la liste des villes</string>
    <string name="sousse">sousse</string>
    <string name="nabl">Nabeul</string>
    <string name="kerwen">Kairouan</string>
    <string name="mahdia">Mahdia</string>
    <string name="gabes">Gabès</string>
    <string name="kef">Le Kef</string>
    <string name="bizr">Bizerte</string>
    <string name="mm">Jendouba</string>
    <string name="ariana">Ariana</string>
    <string name="sidi">Sidi Bouzid</string>
    <string name="zag">Zaghouan</string>
    <string name="mednin">Médenine</string>
    <string name="kbeli">Kébili</string>
    <string name="monasti">Monastir</string>
    <string name="seliana">Siliana</string>
    <string name="benaar">Ben Arous</string>
    <string name="manouba">La Manouba</string>
    <string name="kas">Kasserine</string>
    <string name="touzr">Tozeur</string>
    <string name="gafsa">Gafsa</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="listevent">voir tous evenements</string>
    <string name="hello_world">Hello world!</string>
    <string name="navigation_view_item_1"> Mon profile</string>
    <string name="navigation_view_item_2">Accueil</string>
    <string name="navigation_view_item_3"> Ajouter un évenement</string>
    <string name="navigation_view_item_4">Déconnexion</string>
    <string name="navigation_view_category_1">Navigation View Category</string>
    <string name="navigation_view_category_2">Déconnexion</string>
    <string name="jaffer">JAAFOUR SHOW DE JAAFER GUESMI</string>
    <string name="textlieu">Lundi 20 juin à 22h30,Founoun Al-Bouhayra, Les Berges du Lac - avenue principale Tunis, Tunis, Tunisia</string>
    <string name="description">Lundi 20 juin à 22h30. Rendez-vous au Festival Founoun Al Bouhayra pour un \"Jaafour Show\" Exceptionnel. Prix ticket Gradin 20DT Ticket VIP 30 DT Info line 71 444 240 - 52500033-92418000 Agence ALL IN TRAVEL TUNISIA- 74 Av Habib Bourguiba Rades - Tunisie</string>
    <string name="espace">Bienvenue dans votre espace</string>
    <string name="rouge">rouge</string>
    <string name="ic">mm</string>
    <string name="name">Bienvenue dans votre compte</string>
    <string name="comptee">mon compte</string>
    <string name="destination">Enter destination address</string>
    <string name="origin">Enter origin address</string>
    <string name="min">0 min</string>
    <string name="piic">pic</string>
    <string name="distance">0 km</string>
    <string name="pp">pice</string>
    <string name="path">Find path</string>
    <string name="nomm">Concert Bénarès 20 juin</string>
    <string name="cat">Concert</string>
    <string name="lieutext">20 JUIN À TUNIS \"CAFÉ THÉÂTRE LE MONDIAL\"</string>
    <string name="mmmmmm">CONCERT BÉNARÈS 20 JUIN À TUNIS \"CAFÉ THÉÂTRE LE MONDIAL\" Réservations conseillées +216 95 159 568</string>
</resources>