<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/home"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/lgo"
            android:title="@string/navigation_view_item_1"
            />

        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ajouter"
            android:title="@string/navigation_view_item_3"

            />

        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/lol"
            android:title="@string/navigation_view_item_4"
            />

    </group>



</menu>